2017-10-07  Bruno Haible  <bruno@clisp.org>

	Fix compilation error on FreeBSD (regression from 2017-10-06).
	* m4/vadvise.m4: New file.
	* configure.in: Invoke CL_VADVISE.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-06  Bruno Haible  <bruno@clisp.org>

	Fix compilation error on NetBSD 8 beta.
	* unix.d (vadvise): Assume it is declared in <sys/vadvise.h>.
	* configure.in: Don't invoke CL_VADVISE. Just check for vadvise instead.
	* m4/vadvise.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Autoconf macros: Use AS_HELP_STRING systematically.
	AS_HELP_STRING ensures proper column alignment.
	Note that its first argument must be double quoted, otherwise brackets
	in the argument are discarded if they are not escaped as trigraphs.
	* m4/clisp.m4 (CL_CLISP): Fix indentation and quoting style.
	* m4/ffcall.m4 (CL_FFCALL): Talk about GNU libffcall. Use AS_HELP_STRING
	instead of AC_HELP_STRING.
	* m4/readline.m4 (CL_READLINE): Talk about GNU readline. Use
	AS_HELP_STRING instead of AC_HELP_STRING.
	* m4/termcap.m4 (CL_TERMCAP): Use AS_HELP_STRING.
	* m4/lightning.m4 (CL_LIGHTNING): Fix quoting style.
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Fix signal blocking handling (regression from 2008-05-25).
	* m4/signal.m4 (CL_SIGNAL_UNBLOCK, CL_SIGNAL_BLOCK_OTHERS,
	CL_SIGACTION_UNBLOCK): Remove test of now nonexistent variable
	$signalblocks.
	* aclocal.m4, src/configure: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Modernize: <termio.h>, <sys/termio.h>, <sgtty.h> are not needed.
	All current platforms that have one of these also have <termios.h>.
	* unix.d: Assume that if HAVE_TERMIOS_H is not defined,
	HAVE_SYS_TERMIO_H, HAVE_TERMIO_H, HAVE_SGTTY_H are not defined either.
	* m4/ioctl.m4 (CL_IOCTL): Likewise.
	* stream.d: Remove code for UNIX_TERM_TERMIO and UNIX_TERM_SGTTY.